--- a/assets/theme/css/style.css
+++ b/assets/theme/css/style.css
@@ -1012,11 +1012,4 @@ blockquote {
     max-width: 1340px;
   }
 }
-/*# sourceMappingURL=style.css.map */.engine {
-	position: absolute;
-	text-indent: -2400px;
-	text-align: center;
-	padding: 0;
-	top: 0;
-	left: -2400px;
-}
+/*# sourceMappingURL=style.css.map */
