--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,26 +1,3 @@
-@import url(https://fonts.googleapis.com/css?family=Quicksand:300,400,500,600,700&display=swap);
-
-
-
-/* latin */
-
-@font-face {
-  font-family: 'Crimson Text';
-  font-style: italic;
-  font-weight: 400;
-  font-display: swap;
-  src: url(https://fonts.gstatic.com/s/crimsontext/v13/wlpogwHKFkZgtmSR3NB0oRJfajhRK_Y.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
-/* latin */
-@font-face {
-  font-family: 'Crimson Text';
-  font-style: italic;
-  font-weight: 700;
-  font-display: swap;
-  src: url(https://fonts.gstatic.com/s/crimsontext/v13/wlprgwHKFkZgtmSR3NB0oRJfajDqDuNS_LU.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
 .btn {
   border-width: 2px;
 }
@@ -1420,91 +1397,92 @@ body {
 .cid-sTHQ8Jc1cS .big {
   font-size: 40px;
 }
-.cid-sxGr9dXltn {
+.cid-tncZ5itQeA {
   padding-top: 5rem;
   padding-bottom: 5rem;
   background-color: #ffffff;
 }
-.cid-sxGr9dXltn .card-wrapper {
+.cid-tncZ5itQeA .card-wrapper {
   background: #fef1e6;
   padding: 10% 25%;
   margin: auto;
 }
-.cid-sxGr9dXltn .sign {
+.cid-tncZ5itQeA .sign {
   width: 200px;
   padding-top: 16px;
   display: inline;
 }
-.cid-sxGr9dXltn .row {
+.cid-tncZ5itQeA .row {
   justify-content: center;
   align-items: center;
 }
-.cid-sxGr9dXltn .mbr-section-title {
+.cid-tncZ5itQeA .mbr-section-title {
   padding: 0;
   padding-bottom: 12px;
   margin: 0;
   color: #0c5b47;
 }
-.cid-sxGr9dXltn .mbr-text,
-.cid-sxGr9dXltn .right-side {
+.cid-tncZ5itQeA .mbr-text,
+.cid-tncZ5itQeA .right-side {
   color: #1b745e;
 }
-.cid-sxGr9dXltn .container {
+.cid-tncZ5itQeA .container {
   max-width: 1100px;
 }
-.cid-sxGr9dXltn .padd {
+.cid-tncZ5itQeA .padd {
   padding-right: 50px;
 }
 @media (max-width: 1024px) {
-  .cid-sxGr9dXltn .card-wrapper {
+  .cid-tncZ5itQeA .card-wrapper {
     padding: 10% 10%;
   }
 }
-.cid-sxGr9dXltn .picture {
+.cid-tncZ5itQeA .picture {
   border-radius: 50%;
 }
-.cid-sxGr9dXltn .pic {
+.cid-tncZ5itQeA .pic {
   padding-bottom: 32px;
 }
-.cid-sxGr9dXltn .desc {
+.cid-tncZ5itQeA .desc {
   padding-bottom: 20px;
+  color: #6d787d;
 }
-.cid-sxGr9dXltn .btn {
+.cid-tncZ5itQeA .btn {
   margin-top: 25px;
 }
-.cid-sxGr9dXltn .row {
+.cid-tncZ5itQeA .row {
   flex-direction: row-reverse;
 }
-.cid-sxGr9dXltn .padd {
+.cid-tncZ5itQeA .padd {
   padding-right: 0px;
   padding-left: 50px;
 }
 @media (max-width: 960px) {
-  .cid-sxGr9dXltn .card-wrapper {
+  .cid-tncZ5itQeA .card-wrapper {
     max-width: 420px;
   }
-  .cid-sxGr9dXltn .left-side {
+  .cid-tncZ5itQeA .left-side {
     padding-top: 50px;
   }
-  .cid-sxGr9dXltn .padd {
+  .cid-tncZ5itQeA .padd {
     padding-left: 0px;
     padding-right: 0px;
   }
 }
-.cid-sxGr9dXltn input,
-.cid-sxGr9dXltn textarea {
+.cid-tncZ5itQeA input,
+.cid-tncZ5itQeA textarea {
   background-color: rgba(0, 0, 0, 0);
   border-radius: 0;
   border: none!important;
   box-shadow: none;
   border-bottom: 1px solid #0c5b47!important;
 }
-.cid-sxGr9dXltn .form-control {
+.cid-tncZ5itQeA .form-control {
   font-style: italic;
   color: #1b745e !important;
   font-family: crimson text,serif;
 }
-.cid-sxGr9dXltn .f {
+.cid-tncZ5itQeA .f {
   font-size: 42px;
 }
 .cid-sU3fCGdoPf {
