--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1115,6 +1115,29 @@ body {
     padding: 25px 15px;
   }
 }
+.cid-to4Fdz97iU {
+  padding-top: 0rem;
+  padding-bottom: 4rem;
+  background-color: #ffe885;
+}
+.cid-to4Fdz97iU .mbr-section-title {
+  color: #0c5b47;
+  text-align: center;
+}
+.cid-to4Fdz97iU .mbr-section-subtitle {
+  color: #1b745e;
+  text-align: center;
+  font-style: italic;
+  padding-bottom: 12px;
+}
+.cid-to4Fdz97iU .row {
+  align-items: center;
+  height: 100%;
+}
+.cid-to4Fdz97iU .container {
+  max-width: 720px;
+  margin: auto;
+}
 .cid-sxcnkIrc6r {
   padding-top: 4rem;
   padding-bottom: 0rem;
